...
    <string name="login_button_text">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="icon_password_visible">Password Visible</string>
    <string name="icon_password_hidden">Password Hidden</string>

    <!--Login Error Messages-->
    <string name="login_error_msg_empty_user_name">Please enter your user name</string>
    <string name="login_error_msg_empty_password">Please enter your password</string>
    <string name="login_error_msg_wrong_user_name">User name might be wrong</string>
    <string name="login_error_msg_wrong_password">Password might be wrong</string>

    <!--Login Page - Register Section-->
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="back">Back</string>

    <!--Registration-->
    <string name="registration_heading_text">Registration</string>
    <string name="registration_user_name_label">User Name</string>
    <string name="registration_mobile_label">Mobile Number</string>
...
    <string name="registration_button_text">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="back_to_settings">Back to Settings</string>

    <!--Registration Error Messages-->
    <string name="registration_error_msg_empty_user_name">Please enter your user name</string>
    <string name="registration_error_msg_empty_mobile">Please enter your mobile number</string>
    <string name="registration_error_msg_empty_password">Please enter your password</string>
    <string name="registration_error_msg_empty_confirm_password">Please confirm your password</string>
    <string name="registration_error_msg_password_mismatch">Please enter the same password here as above</string>

    <!--Dashboard-->
    <string name="dashboard_title_welcome_user">Welcome User</string>
</resources>
